1998-10-08  Raja R Harinath  <harinath@cs.umn.edu>

	* gtkcauldron.h: Remove `#pragma }'.

1998-10-08  The Rasterman <raster@redhat.com>
	* gnome-winhints.[ch]: moved to standard method of #defines in gtk+
	and gnome by using enum's and all capitals. added extra support.
	Cleaned up code. aded "check for a gnome compliant wm" code and
	put this all into winhints_demo.c - currently onle E 0.15 in CVS
	supports all of this. I hope other WM's will catch on soon.
	
1998-10-08  James Henstridge  <james@daa.com.au>

	* gnome-href.[ch]:  Added a simple widget for embedding hyperlinks
	into a GUI.  This uses my gnome-url code in libgnome.
	* gtkrc:  Added some lines to make href text blue.

1998-10-05  Raja R Harinath  <harinath@cs.umn.edu>

	Changes to parallel `gtk+'.
	* Makefile.am (libgnomeuiinclude_HEADERS): Move non-generated
	headers ...
	(gnome_headers): ... here.
	(gnome.defs): Depend on $(gnome_headers).
	(auto-files, auto-files-1): Remove rules.
	(BUILT_SOURCES): List generated files.
	
1998-10-04  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.h: Added a comment for the line_style argument.

	* gnome-canvas-line.c (gnome_canvas_line_set_arg): Actually set
	the line_style.

1998-10-04  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-canvas.c (emit_event): Small bug fix:  do not reinitialize
	the item to be used.

Sat Oct  3 23:46:51 EDT 1998 Gregory McLean <gregm@comstar.net>
	
	* gnome-canvas.c (gnome_canvas_item_get_bounds):
	Fixed a whoops in here that was causeing crashes
	GNOME_CANVAS_ITEM_CLASS (item)->bounds should actually be
	GNOME_CANVAS_ITEM_CLASS (item->object.klass)->bounds (though
	yosh says it really should be (item)->klass) :)

	* gnome-canvas-line.h (GnomeCanvasLine): I found myself needing
	to have some dashed lines as items, it looked like a fairly trival
	change so I added a GdkLineStyle member to GnomeCanvasLine.

	* gnome-canvas-line.c: Added a line_style arg for drawing dashed