@@ -21,8 +21,5 @@ extern GtkType GTK_TYPE_GNOME_WIN_STATE;
 extern GtkType GTK_TYPE_GNOME_WIN_HINTS;
 extern GtkType GTK_TYPE_GNOME_WIN_APP_STATE;
 extern GtkType GTK_TYPE_CLOCK_TYPE;
-extern GtkType GTK_TYPE_CALENDAR_DISPLAY_OPTIONS;
-extern GtkType GTK_TYPE_CALENDAR_FONT;
-extern GtkType GTK_TYPE_CALENDAR_COLOR;
 
-#define	GNOME_TYPE_NUM_BUILTINS	(24)
+#define	GNOME_TYPE_NUM_BUILTINS	(21)
