@@ -42,9 +42,3 @@
     GTK_TYPE_ENUM, _gnome_win_app_state_values },
   { "GtkClockType", &GTK_TYPE_CLOCK_TYPE,
     GTK_TYPE_ENUM, _gtk_clock_type_values },
-  { "GtkCalendarDisplayOptions", &GTK_TYPE_CALENDAR_DISPLAY_OPTIONS,
-    GTK_TYPE_ENUM, _gtk_calendar_display_options_values },
-  { "GtkCalendarFont", &GTK_TYPE_CALENDAR_FONT,
-    GTK_TYPE_ENUM, _gtk_calendar_font_values },
-  { "GtkCalendarColor", &GTK_TYPE_CALENDAR_COLOR,
-    GTK_TYPE_ENUM, _gtk_calendar_color_values },
