@@ -21,6 +21,3 @@ GtkType GTK_TYPE_GNOME_WIN_STATE = 0;
 GtkType GTK_TYPE_GNOME_WIN_HINTS = 0;
 GtkType GTK_TYPE_GNOME_WIN_APP_STATE = 0;
 GtkType GTK_TYPE_CLOCK_TYPE = 0;
-GtkType GTK_TYPE_CALENDAR_DISPLAY_OPTIONS = 0;
-GtkType GTK_TYPE_CALENDAR_FONT = 0;
-GtkType GTK_TYPE_CALENDAR_COLOR = 0;
